[gd_scene load_steps=32 format=3 uid="uid://bdxtusi0wukv6"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_2ask5"]
[ext_resource type="Texture2D" uid="uid://mkkiqqr3st34" path="res://assets/player animation/base player/Mexican-Sheet-Vol3.png" id="2_ygxmt"]
[ext_resource type="Texture2D" uid="uid://ca5e3kagggrvs" path="res://assets/player animation/base player/japan man.aesprite-Sheet.png" id="3_d1qb2"]
[ext_resource type="Texture2D" uid="uid://cthin7n67v6gu" path="res://assets/guns/polynesianpistol.png" id="4_fitw1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptv32"]
size = Vector2(20, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03cw0"]
size = Vector2(20, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4www"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urset"]
atlas = ExtResource("2_ygxmt")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkmod"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wt4h"]
atlas = ExtResource("2_ygxmt")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sac7y"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbqc8"]
atlas = ExtResource("2_ygxmt")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m50t"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8phm8"]
atlas = ExtResource("3_d1qb2")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vesnh"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gwpa"]
atlas = ExtResource("2_ygxmt")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4mud"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w242"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lddep"]
atlas = ExtResource("2_ygxmt")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w74rt"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lexlv"]
atlas = ExtResource("2_ygxmt")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdq0s"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bysk"]
atlas = ExtResource("2_ygxmt")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d37ix"]
atlas = ExtResource("2_ygxmt")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2245"]
atlas = ExtResource("2_ygxmt")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejll2"]
atlas = ExtResource("2_ygxmt")
region = Rect2(64, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fb2fc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4www")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urset")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkmod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wt4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sac7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbqc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m50t")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [],
"loop": true,
"name": &"japaneseidle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"japanesejump",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"japanesewalk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8phm8")
}],
"loop": true,
"name": &"japanesewall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vesnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gwpa")
}],
"loop": true,
"name": &"mexicanidle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4mud")
}],
"loop": true,
"name": &"mexicanjump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w242")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lddep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w74rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lexlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdq0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bysk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d37ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2245")
}],
"loop": true,
"name": &"mexicanwalk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejll2")
}],
"loop": true,
"name": &"mexicanwall",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_px65c"]
_data = [Vector2(0.146067, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_jb4rf"]
colors = PackedColorArray(1, 0, 0, 1, 0.973069, 0.696689, 0.517969, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68qsj"]
size = Vector2(27.1973, 27.9972)

[sub_resource type="Curve" id="Curve_6csp3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
position = Vector2(0, -25)
scale = Vector2(0.7, 0.7)
collision_layer = 2
script = ExtResource("1_2ask5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(0, -25)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_ptv32")

[node name="Area2D" type="Area2D" parent="CollisionShape2D" groups=["player"]]

[node name="Area2DCollisionShape" type="CollisionShape2D" parent="CollisionShape2D/Area2D" groups=["player"]]
shape = SubResource("RectangleShape2D_03cw0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_fb2fc")
animation = &"attack"

[node name="Gun" type="Sprite2D" parent="CollisionShape2D/AnimatedSprite2D"]
z_index = 1
position = Vector2(18.5, 1.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_fitw1")

[node name="Marker2D" type="Marker2D" parent="CollisionShape2D/AnimatedSprite2D/Gun"]
position = Vector2(14.4286, -4)

[node name="MuzzleFlashPistol" type="CPUParticles2D" parent="CollisionShape2D/AnimatedSprite2D/Gun/Marker2D"]
emitting = false
amount = 16
lifetime = 0.1
one_shot = true
explosiveness = 1.0
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 80.0
initial_velocity_max = 100.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 4.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_px65c")
color_ramp = SubResource("Gradient_jb4rf")

[node name="Melee" type="Area2D" parent="CollisionShape2D/AnimatedSprite2D"]
position = Vector2(0, -17.5018)
scale = Vector2(0.625063, 0.625063)
collision_layer = 2
collision_mask = 2

[node name="AttackCollision" type="CollisionShape2D" parent="CollisionShape2D/AnimatedSprite2D/Melee"]
position = Vector2(36.7963, 29.1999)
shape = SubResource("RectangleShape2D_68qsj")

[node name="WalkParticle" type="CPUParticles2D" parent="CollisionShape2D/AnimatedSprite2D"]
show_behind_parent = true
position = Vector2(-7.14286, 30.2143)
scale = Vector2(0.5, 0.5)
amount = 15
lifetime = 0.7
randomness = 0.57
direction = Vector2(-0.3, -1)
spread = 20.0
gravity = Vector2(0, 150)
initial_velocity_min = 60.0
initial_velocity_max = 70.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 5.0
scale_amount_max = 7.0
scale_amount_curve = SubResource("Curve_6csp3")
color = Color(0.389287, 0.389287, 0.389287, 1)

[node name="Label" type="Label" parent="."]
offset_left = -36.0
offset_top = -103.0
offset_right = 36.0
offset_bottom = -80.0
text = "Player : #"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="CollisionShape2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="CollisionShape2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="CollisionShape2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="CollisionShape2D/AnimatedSprite2D/Melee" to="." method="_on_melee_body_entered"]
